<resources>
    <string name="app_name">EcoTrivia</string>
    <string name="popular_news">Popular News</string>
    <string name="search">Search</string>
    <string name="search_et_hint">Search topics</string>
    <string name="description">Description</string>
    <string name="visit_site">Read full news</string>
    <string name="app_logo">App logo</string>
    <string name="no_browser">The device doesn\'t have any browser to view the document!</string>
    <string name="favorite_news">Favorite News</string>
    <string name="delete_article">Successfully deleted article</string>
    <string name="undo">Undo</string>
    <string name="battery_text">&#160;%1$d%% battery remaining</string>
    <string name="no_internet">Poor or no Internet connection.\nPlease, check your Internet settings</string>
    <string name="retry">Retry</string>
    <string name="oops">Ooops!</string>
    <string name="news_image">news image</string>
    <string name="arrow_back">arrow back</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="quiz">Quiz</string>
    <string name="take_quiz">take quiz</string>
    <string name="level">Level</string>
    <string name="questions">Questions</string>
    <string name="loading_quiz">Loading Quiz</string>
    <string name="loading_question">Loading Question</string>
    <string name="next">next</string>
    <string name="go_to_results">go to results</string>
    <string name="correct_answer">Answer is Correct</string>
    <string name="incorrect_ancwer">Answer is incorrect</string>
    <string name="time_is_up">Time is up</string>
    <string name="result">Result</string>
    <string name="correct_answers">Correct answers</string>
    <string name="wrong_answers">Wrong answers</string>
    <string name="missed_questions">Missed questions</string>
    <string name="go_to_home">go to home</string>
</resources>